Fix layout bug that would add the WooCommerce gray background colour to the payment method box

--- a/assets/sass/shop/_checkout.scss
+++ b/assets/sass/shop/_checkout.scss
@@ -6,6 +6,10 @@
  * Version: 1.0.0
  */
 
+#payment {
+  background-color: $white !important;
+}
+
 .checkout {
   h3 {
     @include margin-y(1rem, 1rem);
